# Smart-Pay-algorithm

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  api_models.py  config.py  dependencies.py  main.py  orchestrator.py  schemas.py  stored_outcome_source.py
app/backtest/: __init__.py  episode.py  harness.py  metrics.py  policies.py  report.py
app/bandit/: __init__.py  calibration.py  contracts.py  linucb.py  persistence.py  pipeline.py  selector.py  vectorize.py
app/cost/: __init__.py  base.py  (+1 more)
data/: bandit_calibration.json  calibration.json
scripts/: README.md  __init__.py  recalibrate.py  run_backtest.py
tests/: test_api.py  test_backtest_episode.py  test_backtest_harness.py  test_backtest_metrics.py  test_backtest_policies.py  test_backtest_report.py  test_bandit_calibration.py  test_bandit_linucb.py  test_bandit_persistence.py  test_bandit_pipeline.py  test_bandit_selector.py  test_bandit_vectorize.py  test_cost_base.py  test_cost_scorer.py  test_feedback_contracts.py  test_feedback_outbox.py  test_feedback_outcome_source.py  test_feedback_pipeline.py  test_feedback_processor.py  test_feedback_reward.py  test_forecasting_base.py  test_forecasting_garch.py  test_health.py  test_market_data_base.py  test_market_data_calibration.py  test_market_data_mock.py  test_orchestrator.py  test_pareto_assembler.py  test_pareto_dominance.py  test_pareto_filter.py  test_pareto_pipeline.py  test_regime_base.py  test_regime_threshold.py  test_risk_base.py  test_risk_monte_carlo.py  test_routing_base.py  test_routing_risk_adaptive.py  test_schemas.py
(+30 files in other folders)
