[project]
name = "ramhd-service"
version = "0.1.0"
description = "Risk-Adaptive Multi-Horizon Dominance algorithm for CryptoChain Smart Pay"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "arch>=7.2.0",
    "hmmlearn>=0.3.3",
    "scikit-learn>=1.5.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
